# Delibrium

./: .gitignore
Panelist/: .env.example  .gitignore  README.md  pyproject.toml
Panelist/app/: config.py  dependencies.py  main.py
Panelist/app/api/: chat.py  conversations.py  health.py  models.py
Panelist/app/observability/: logging.py
Panelist/app/panelists/: base.py  claude.py  factory.py  fake.py
Panelist/app/runtime/: errors.py  stream_events.py
Panelist/app/schemas/: chat.py  conversation.py  events.py  provider.py
Panelist/app/storage/: base.py  models.py  sqlite_store.py
Panelist/tests/: conftest.py  test_base_panelist.py  test_chat_api.py  test_claude_panelist.py  test_panelist_factory.py  test_streaming.py
prototype/: agent.py  moderator.py
